# django-inline-static

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  api_css.rst  api_loader.rst  api_templatetags.rst  conf.py  index.rst  installation.rst  usage.rst
inline_static/: __init__.py  css.py  loader.py
inline_static/templatetags/: inline_static_tags.py
tests/: settings.py  test_templatetags.py
tests/static/css/: all.css
tests/static/js/: module.js
